--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -818,6 +818,30 @@ img {
   right: 1rem;
 }
 
+.top-8{
+  top: 2rem;
+}
+
+.top-9{
+  top: 2.25rem;
+}
+
+.-left-3{
+  left: -0.75rem;
+}
+
+.-right-3{
+  right: -0.75rem;
+}
+
+.-right-2{
+  right: -0.5rem;
+}
+
+.-right-4{
+  right: -1rem;
+}
+
 .z-\[3\]{
   z-index: 3;
 }
@@ -834,24 +858,20 @@ img {
   z-index: 1;
 }
 
-.order-1{
-  order: 1;
-}
-
 .order-2{
   order: 2;
 }
 
-.col-span-2{
-  grid-column: span 2 / span 2;
-}
-
-.col-span-12{
-  grid-column: span 12 / span 12;
+.order-1{
+  order: 1;
 }
 
 .col-span-3{
   grid-column: span 3 / span 3;
+}
+
+.col-span-12{
+  grid-column: span 12 / span 12;
 }
 
 .mx-auto{
@@ -864,14 +884,14 @@ img {
   margin-bottom: 2rem;
 }
 
-.mx-2{
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-
 .my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .mx-4{
@@ -955,12 +975,16 @@ img {
   height: 3rem;
 }
 
-.h-full{
-  height: 100%;
+.h-3\/4{
+  height: 75%;
 }
 
 .h-9{
   height: 2.25rem;
+}
+
+.h-full{
+  height: 100%;
 }
 
 .h-96{
@@ -1003,16 +1027,16 @@ img {
   height: 1.25rem;
 }
 
-.h-1\/3{
-  height: 33.333333%;
+.h-64{
+  height: 16rem;
 }
 
-.h-2\/3{
-  height: 66.666667%;
+.h-24{
+  height: 6rem;
 }
 
-.h-3\/4{
-  height: 75%;
+.h-28{
+  height: 7rem;
 }
 
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
@@ -1029,6 +1053,10 @@ img {
 
 .w-full{
   width: 100%;
+}
+
+.w-3\/4{
+  width: 75%;
 }
 
 .w-1\/2{
@@ -1087,12 +1115,20 @@ img {
   width: 1.25rem;
 }
 
-.w-2\/3{
-  width: 66.666667%;
+.w-screen{
+  width: 100vw;
 }
 
-.w-3\/4{
-  width: 75%;
+.w-48{
+  width: 12rem;
+}
+
+.w-24{
+  width: 6rem;
+}
+
+.min-w-full{
+  min-width: 100%;
 }
 
 .max-w-full{
@@ -1109,6 +1145,18 @@ img {
 
 .flex-grow{
   flex-grow: 1;
+}
+
+.grow{
+  flex-grow: 1;
+}
+
+.table-auto{
+  table-layout: auto;
+}
+
+.border-collapse{
+  border-collapse: collapse;
 }
 
 .origin-top-right{
@@ -1176,8 +1224,8 @@ img {
   resize: both;
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+.grid-cols-4{
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .grid-cols-2{
@@ -1192,12 +1240,8 @@ img {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
-.grid-cols-4{
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
-.grid-rows-2{
-  grid-template-rows: repeat(2, minmax(0, 1fr));
+.grid-cols-10{
+  grid-template-columns: repeat(10, minmax(0, 1fr));
 }
 
 .flex-row{
@@ -1224,8 +1268,16 @@ img {
   justify-content: space-between;
 }
 
+.gap-12{
+  gap: 3rem;
+}
+
 .gap-4{
   gap: 1rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
 }
 
 .gap-2{
@@ -1234,10 +1286,6 @@ img {
 
 .gap-10{
   gap: 2.5rem;
-}
-
-.gap-6{
-  gap: 1.5rem;
 }
 
 .gap-3{
@@ -1252,8 +1300,24 @@ img {
   gap: 1.25rem;
 }
 
-.gap-12{
-  gap: 3rem;
+.gap-56{
+  gap: 14rem;
+}
+
+.gap-40{
+  gap: 10rem;
+}
+
+.gap-32{
+  gap: 8rem;
+}
+
+.gap-24{
+  gap: 6rem;
+}
+
+.gap-36{
+  gap: 9rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
@@ -1324,6 +1388,10 @@ img {
   border-width: 1px;
 }
 
+.border-2{
+  border-width: 2px;
+}
+
 .border-y{
   border-top-width: 1px;
   border-bottom-width: 1px;
@@ -1333,12 +1401,12 @@ img {
   border-top-width: 1px;
 }
 
-.border-t-2{
-  border-top-width: 2px;
-}
-
 .border-b{
   border-bottom-width: 1px;
+}
+
+.border-t-2{
+  border-top-width: 2px;
 }
 
 .border-b-2{
@@ -1385,6 +1453,16 @@ img {
 .border-slate-800{
   --tw-border-opacity: 1;
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
+}
+
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .bg-white{
@@ -1459,6 +1537,21 @@ img {
 
 .bg-gray-900\/50{
   background-color: rgb(17 24 39 / 0.5);
+}
+
+.bg-gray-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+.bg-gray-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .object-contain{
@@ -1547,8 +1640,17 @@ img {
   padding-right: 1.25rem;
 }
 
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .pt-10{
   padding-top: 2.5rem;
+}
+
+.pb-8{
+  padding-bottom: 2rem;
 }
 
 .pt-2{
@@ -1559,8 +1661,12 @@ img {
   padding-bottom: 1rem;
 }
 
-.pb-8{
-  padding-bottom: 2rem;
+.pt-8{
+  padding-top: 2rem;
+}
+
+.pb-6{
+  padding-bottom: 1.5rem;
 }
 
 .pb-2{
@@ -1599,10 +1705,6 @@ img {
   padding-top: 0.25rem;
 }
 
-.pb-6{
-  padding-bottom: 1.5rem;
-}
-
 .pl-3{
   padding-left: 0.75rem;
 }
@@ -1615,8 +1717,8 @@ img {
   padding-right: 1.25rem;
 }
 
-.pt-8{
-  padding-top: 2rem;
+.pt-20{
+  padding-top: 5rem;
 }
 
 .text-left{
@@ -1651,6 +1753,11 @@ img {
   line-height: 1.75rem;
 }
 
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1676,16 +1783,6 @@ img {
   line-height: 2.5rem;
 }
 
-.text-8xl{
-  font-size: 6rem;
-  line-height: 1;
-}
-
-.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
 .font-medium{
   font-weight: 500;
 }
@@ -1706,8 +1803,8 @@ img {
   font-weight: 100;
 }
 
-.font-bold{
-  font-weight: 700;
+.uppercase{
+  text-transform: uppercase;
 }
 
 .text-gray-600{
@@ -1733,6 +1830,21 @@ img {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-zinc-700{
+  --tw-text-opacity: 1;
+  color: rgb(63 63 70 / var(--tw-text-opacity));
+}
+
+.text-zinc-400{
+  --tw-text-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-text-opacity));
+}
+
+.text-zinc-800{
+  --tw-text-opacity: 1;
+  color: rgb(39 39 42 / var(--tw-text-opacity));
 }
 
 .text-zinc-600{
@@ -1763,11 +1875,6 @@ img {
 .text-slate-500{
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-
-.text-zinc-700{
-  --tw-text-opacity: 1;
-  color: rgb(63 63 70 / var(--tw-text-opacity));
 }
 
 .text-slate-50{
@@ -1808,16 +1915,6 @@ img {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.text-zinc-800{
-  --tw-text-opacity: 1;
-  color: rgb(39 39 42 / var(--tw-text-opacity));
-}
-
-.text-zinc-400{
-  --tw-text-opacity: 1;
-  color: rgb(161 161 170 / var(--tw-text-opacity));
 }
 
 .placeholder-zinc-400::-moz-placeholder{
@@ -1969,6 +2066,11 @@ img {
   color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 
+.hover\:text-blue-500:hover{
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
 .focus\:border-transparent:focus{
   border-color: transparent;
 }
@@ -2005,10 +2107,22 @@ img {
   }
 }
 
+@media (min-width: 768px){
+
+  .md\:px-32{
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+}
+
 @media (min-width: 1024px){
 
   .lg\:order-1{
     order: 1;
+  }
+
+  .lg\:col-span-2{
+    grid-column: span 2 / span 2;
   }
 
   .lg\:col-span-3{
@@ -2017,10 +2131,6 @@ img {
 
   .lg\:col-span-9{
     grid-column: span 9 / span 9;
-  }
-
-  .lg\:col-span-2{
-    grid-column: span 2 / span 2;
   }
 
   .lg\:mb-0{
@@ -2047,6 +2157,10 @@ img {
     width: 1024px;
   }
 
+  .lg\:w-64{
+    width: 16rem;
+  }
+
   .lg\:scale-90{
     --tw-scale-x: .9;
     --tw-scale-y: .9;
@@ -2057,8 +2171,8 @@ img {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .lg\:grid-rows-2{
-    grid-template-rows: repeat(2, minmax(0, 1fr));
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:flex-row{
@@ -2069,12 +2183,24 @@ img {
     flex-direction: column;
   }
 
+  .lg\:items-start{
+    align-items: flex-start;
+  }
+
   .lg\:items-center{
     align-items: center;
   }
 
+  .lg\:justify-start{
+    justify-content: flex-start;
+  }
+
   .lg\:justify-between{
     justify-content: space-between;
+  }
+
+  .lg\:gap-2{
+    gap: 0.5rem;
   }
 
   .lg\:gap-36{
@@ -2083,10 +2209,6 @@ img {
 
   .lg\:gap-6{
     gap: 1.5rem;
-  }
-
-  .lg\:gap-2{
-    gap: 0.5rem;
   }
 
   .lg\:p-7{
@@ -2102,6 +2224,10 @@ img {
     padding-left: 18rem;
   }
 
+  .lg\:pt-0{
+    padding-top: 0px;
+  }
+
   .lg\:text-left{
     text-align: left;
   }
@@ -2109,6 +2235,16 @@ img {
   .lg\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .lg\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .lg\:opacity-0{
