--- a/public/css/app.css
+++ b/public/css/app.css
@@ -774,6 +774,24 @@ body {
 .right-4{
   right: 1rem;
 }
+.top-8{
+  top: 2rem;
+}
+.top-9{
+  top: 2.25rem;
+}
+.-left-3{
+  left: -0.75rem;
+}
+.-right-3{
+  right: -0.75rem;
+}
+.-right-2{
+  right: -0.5rem;
+}
+.-right-4{
+  right: -1rem;
+}
 .z-\[3\]{
   z-index: 3;
 }
@@ -786,20 +804,17 @@ body {
 .z-\[1\]{
   z-index: 1;
 }
-.order-1{
-  order: 1;
-}
 .order-2{
   order: 2;
 }
-.col-span-2{
-  grid-column: span 2 / span 2;
-}
-.col-span-12{
-  grid-column: span 12 / span 12;
+.order-1{
+  order: 1;
 }
 .col-span-3{
   grid-column: span 3 / span 3;
+}
+.col-span-12{
+  grid-column: span 12 / span 12;
 }
 .mx-auto{
   margin-left: auto;
@@ -809,13 +824,13 @@ body {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
-.mx-2{
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
 .my-4{
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+.mx-2{
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 .mx-4{
   margin-left: 1rem;
@@ -878,11 +893,14 @@ body {
 .h-12{
   height: 3rem;
 }
-.h-full{
-  height: 100%;
+.h-3\/4{
+  height: 75%;
 }
 .h-9{
   height: 2.25rem;
+}
+.h-full{
+  height: 100%;
 }
 .h-96{
   height: 24rem;
@@ -914,14 +932,14 @@ body {
 .h-5{
   height: 1.25rem;
 }
-.h-1\/3{
-  height: 33.333333%;
+.h-64{
+  height: 16rem;
 }
-.h-2\/3{
-  height: 66.666667%;
+.h-24{
+  height: 6rem;
 }
-.h-3\/4{
-  height: 75%;
+.h-28{
+  height: 7rem;
 }
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
@@ -934,6 +952,9 @@ body {
 }
 .w-full{
   width: 100%;
+}
+.w-3\/4{
+  width: 75%;
 }
 .w-1\/2{
   width: 50%;
@@ -977,11 +998,17 @@ body {
 .w-5{
   width: 1.25rem;
 }
-.w-2\/3{
-  width: 66.666667%;
+.w-screen{
+  width: 100vw;
 }
-.w-3\/4{
-  width: 75%;
+.w-48{
+  width: 12rem;
+}
+.w-24{
+  width: 6rem;
+}
+.min-w-full{
+  min-width: 100%;
 }
 .max-w-full{
   max-width: 100%;
@@ -994,6 +1021,15 @@ body {
 }
 .flex-grow{
   flex-grow: 1;
+}
+.grow{
+  flex-grow: 1;
+}
+.table-auto{
+  table-layout: auto;
+}
+.border-collapse{
+  border-collapse: collapse;
 }
 .origin-top-right{
   transform-origin: top right;
@@ -1050,8 +1086,8 @@ body {
 .resize{
   resize: both;
 }
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+.grid-cols-4{
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1062,11 +1098,8 @@ body {
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
-.grid-cols-4{
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-.grid-rows-2{
-  grid-template-rows: repeat(2, minmax(0, 1fr));
+.grid-cols-10{
+  grid-template-columns: repeat(10, minmax(0, 1fr));
 }
 .flex-row{
   flex-direction: row;
@@ -1086,17 +1119,20 @@ body {
 .justify-between{
   justify-content: space-between;
 }
+.gap-12{
+  gap: 3rem;
+}
 .gap-4{
   gap: 1rem;
+}
+.gap-6{
+  gap: 1.5rem;
 }
 .gap-2{
   gap: 0.5rem;
 }
 .gap-10{
   gap: 2.5rem;
-}
-.gap-6{
-  gap: 1.5rem;
 }
 .gap-3{
   gap: 0.75rem;
@@ -1107,8 +1143,20 @@ body {
 .gap-5{
   gap: 1.25rem;
 }
-.gap-12{
-  gap: 3rem;
+.gap-56{
+  gap: 14rem;
+}
+.gap-40{
+  gap: 10rem;
+}
+.gap-32{
+  gap: 8rem;
+}
+.gap-24{
+  gap: 6rem;
+}
+.gap-36{
+  gap: 9rem;
 }
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
@@ -1162,6 +1210,9 @@ body {
 .border{
   border-width: 1px;
 }
+.border-2{
+  border-width: 2px;
+}
 .border-y{
   border-top-width: 1px;
   border-bottom-width: 1px;
@@ -1169,11 +1220,11 @@ body {
 .border-t{
   border-top-width: 1px;
 }
-.border-t-2{
-  border-top-width: 2px;
-}
 .border-b{
   border-bottom-width: 1px;
+}
+.border-t-2{
+  border-top-width: 2px;
 }
 .border-b-2{
   border-bottom-width: 2px;
@@ -1210,6 +1261,14 @@ body {
 .border-slate-800{
   --tw-border-opacity: 1;
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
+}
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 .bg-white{
   --tw-bg-opacity: 1;
@@ -1269,6 +1328,18 @@ body {
 }
 .bg-gray-900\/50{
   background-color: rgb(17 24 39 / 0.5);
+}
+.bg-gray-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+.bg-gray-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .object-contain{
   -o-object-fit: contain;
@@ -1338,8 +1409,15 @@ body {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
 .pt-10{
   padding-top: 2.5rem;
+}
+.pb-8{
+  padding-bottom: 2rem;
 }
 .pt-2{
   padding-top: 0.5rem;
@@ -1347,8 +1425,11 @@ body {
 .pb-4{
   padding-bottom: 1rem;
 }
-.pb-8{
-  padding-bottom: 2rem;
+.pt-8{
+  padding-top: 2rem;
+}
+.pb-6{
+  padding-bottom: 1.5rem;
 }
 .pb-2{
   padding-bottom: 0.5rem;
@@ -1377,9 +1458,6 @@ body {
 .pt-1{
   padding-top: 0.25rem;
 }
-.pb-6{
-  padding-bottom: 1.5rem;
-}
 .pl-3{
   padding-left: 0.75rem;
 }
@@ -1389,8 +1467,8 @@ body {
 .pr-5{
   padding-right: 1.25rem;
 }
-.pt-8{
-  padding-top: 2rem;
+.pt-20{
+  padding-top: 5rem;
 }
 .text-left{
   text-align: left;
@@ -1417,6 +1495,10 @@ body {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
+}
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1437,14 +1519,6 @@ body {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
-.text-8xl{
-  font-size: 6rem;
-  line-height: 1;
-}
-.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
-}
 .font-medium{
   font-weight: 500;
 }
@@ -1460,8 +1534,8 @@ body {
 .font-thin{
   font-weight: 100;
 }
-.font-bold{
-  font-weight: 700;
+.uppercase{
+  text-transform: uppercase;
 }
 .text-gray-600{
   --tw-text-opacity: 1;
@@ -1482,6 +1556,18 @@ body {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-zinc-700{
+  --tw-text-opacity: 1;
+  color: rgb(63 63 70 / var(--tw-text-opacity));
+}
+.text-zinc-400{
+  --tw-text-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-text-opacity));
+}
+.text-zinc-800{
+  --tw-text-opacity: 1;
+  color: rgb(39 39 42 / var(--tw-text-opacity));
 }
 .text-zinc-600{
   --tw-text-opacity: 1;
@@ -1506,10 +1592,6 @@ body {
 .text-slate-500{
   --tw-text-opacity: 1;
   color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-.text-zinc-700{
-  --tw-text-opacity: 1;
-  color: rgb(63 63 70 / var(--tw-text-opacity));
 }
 .text-slate-50{
   --tw-text-opacity: 1;
@@ -1542,14 +1624,6 @@ body {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-.text-zinc-800{
-  --tw-text-opacity: 1;
-  color: rgb(39 39 42 / var(--tw-text-opacity));
-}
-.text-zinc-400{
-  --tw-text-opacity: 1;
-  color: rgb(161 161 170 / var(--tw-text-opacity));
 }
 .placeholder-zinc-400::-moz-placeholder{
   --tw-placeholder-opacity: 1;
@@ -1674,6 +1748,11 @@ body {
   color: rgb(2 132 199 / var(--tw-text-opacity));
 }
 
+.hover\:text-blue-500:hover{
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
 .focus\:border-transparent:focus{
   border-color: transparent;
 }
@@ -1712,11 +1791,25 @@ body {
   }
 }
 
+@media (min-width: 768px){
+
+
+  .md\:px-32{
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
+}
+
 @media (min-width: 1024px){
 
 
   .lg\:order-1{
     order: 1;
+  }
+
+
+  .lg\:col-span-2{
+    grid-column: span 2 / span 2;
   }
 
 
@@ -1727,11 +1820,6 @@ body {
 
   .lg\:col-span-9{
     grid-column: span 9 / span 9;
-  }
-
-
-  .lg\:col-span-2{
-    grid-column: span 2 / span 2;
   }
 
 
@@ -1765,6 +1853,11 @@ body {
   }
 
 
+  .lg\:w-64{
+    width: 16rem;
+  }
+
+
   .lg\:scale-90{
     --tw-scale-x: .9;
     --tw-scale-y: .9;
@@ -1777,8 +1870,8 @@ body {
   }
 
 
-  .lg\:grid-rows-2{
-    grid-template-rows: repeat(2, minmax(0, 1fr));
+  .lg\:grid-cols-4{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
 
@@ -1792,13 +1885,28 @@ body {
   }
 
 
+  .lg\:items-start{
+    align-items: flex-start;
+  }
+
+
   .lg\:items-center{
     align-items: center;
   }
 
 
+  .lg\:justify-start{
+    justify-content: flex-start;
+  }
+
+
   .lg\:justify-between{
     justify-content: space-between;
+  }
+
+
+  .lg\:gap-2{
+    gap: 0.5rem;
   }
 
 
@@ -1809,11 +1917,6 @@ body {
 
   .lg\:gap-6{
     gap: 1.5rem;
-  }
-
-
-  .lg\:gap-2{
-    gap: 0.5rem;
   }
 
 
@@ -1833,6 +1936,11 @@ body {
   }
 
 
+  .lg\:pt-0{
+    padding-top: 0px;
+  }
+
+
   .lg\:text-left{
     text-align: left;
   }
@@ -1841,6 +1949,18 @@ body {
   .lg\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+
+  .lg\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
 
